# ds-chat-gpt

./: .bumpversion.cfg  .coveragerc  .gitignore  README.md  requirements.txt  service.yaml  setup.cfg
container/: Dockerfile  nginx.conf  pip_conf.conf  supervisord.conf  vm_docker_build.sh
src/edo/chat_gpt/: app.py  idea.py  run_app.py
src/edo/chat_gpt/.streamlit/: config.toml
src/edo/chat_gpt/_core_utils/: deploy_app.py
src/edo/chat_gpt/_utils/: predict_csv.py  theme.css  theme.py
src/edo/chat_gpt/app/: app.py  deploy_app.py  run_app.py
src/edo/chat_gpt/app/.streamlit/: config.toml
src/edo/chat_gpt/app/pages/: app_image.py  app_o1.py  app_vision.py
src/edo/chat_gpt/model_configuration/prompts/: prompt.tmpl  system.tmpl
src/edo/chat_gpt/pages/: app_image.py  app_vision.py
tests/: test_chat_gpt.py
