[aliases]
test = pytest

[metadata]
name = edo-ds-mkt-lib-chat-gpt
version = 0.0.1
template = app
project = ds-gcloud-lab
package_name = chat_gpt
author = eDreams ODIGEO
author_email = ds-mkt@edreamsodigeo.com
license = COPYRIGHT
description = ds-chat-gpt
keywords = ds-chat-gpt
url = http://bitbucket.org/odigeoteam/edo-ds-mkt-lib-chat-gpt
long_description = file: README.md


[options]
package_dir =
    = src
install_requires = file: requirements.txt
include_package_data = True
namespace_packages = edo

[options.packages.find]
where = src

[options.entry_points]
console_scripts = chat_gpt_get_table=edo.chat_gpt.get_table:main

